major patch for popups

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -24,18 +24,34 @@
     </header>
 
     <section id="articles">
+        <div id="popup"></div>
         <button type="button" class="collapsible-article">Article I</button>
         <div class="content">
             <article class="article">
-                <section class="section-body">
+                <section class="section-body" data-info =
+                        "What it basically means?: All national lawmaking power goes to Congress (two chambers: House + Senate).
+                        Why does this matter at all ?:  Establishes that Congress is the only body that makes federal laws which 
+                        prevents lawmaking by the executive/judicial branches. Annotated : Section 1 vests all of the powers of 
+                        lawmaking of the federal government with a bicameral legislature (House and Senate). It achieves a clear 
+                        division of powers with the legislature being granted legislative power. It also introduces checks and 
+                        balances as a subsequent provision and amendments prohibit how Congress can exercise this power.">
                     <h3 class="section-title">Section 1</h3>
                     <p>
                         All legislative Powers herein granted shall be vested in a Congress of the 
                         United States, which shall consist of a Senate and House of Representatives.
-                    </p>
+                    </p>                    
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info =
+                        "What it basically means?:  House members elected every 2 years by the people; age 25+, 7-year 
+                        citizen, resident of their state; initial apportionment and the three‑fifths clause (since repealed 
+                        by the 14th Amendment); decennial census; vacancies filled by elections; House chooses its officers 
+                        and holds impeachment power. Why does this matter at all ?: The House is the chamber closest to popular 
+                        will and what the people of an area want (short terms, direct elections). Annotated: Section 2 
+                        prescribes who can serve in the House, how often members are elected, and how the representation is 
+                        allocated across the states based on a national census. It contains Founding Era language about the 
+                        three‑fifths compromise (since abolished) and procedures for handling vacancies. It also grants the 
+                        House the exclusive authority of initiating impeachments and of electing officers of the House.">
                     <h3 class="section-title">Section 2</h3>
                     <p>
                         The House of Representatives shall be composed of Members chosen every second 
@@ -72,7 +88,23 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info = 
+                    "What it basically means?: Two Senators per state; 6‑year terms; staggered classes; requirements: at 
+                    least age 30+, at least a 9‑year US citizen, and an elected state dweller; originally elected from 
+                    state legislatures (changed through the 17th Amendment to direct election); VP presides and breaks 
+                    ties; Senate holds impeachments; Chief Justice sits during President's trial; 2/3 vote convicts; penalties 
+                    are limited to removal and disqualification (additional criminal responsibility may still accompany); 
+                    governors (state executives) may appoint provisionally to vacancies until the legislature convenes 
+                    (today, since the 17th Amendment, state law governs temporary appointments and special elections).
+                    Why does this matter at all ?: Provides stability and state equality; acts as a check on the House and 
+                    executive Annotated: Section 3 rebalances the more populist House with equal state representation in the 
+                    Senate and longer, staggered terms as a means of promoting continuity. It enacts rules of qualification 
+                    for Senators—a minimum of 30 years of age, a 9‑year citizen of the United States, and resident of the state 
+                    he or she represents—and invests the Vice President as presiding officer and as tie‑breaker. It assigns the 
+                    Senate an exclusive role of trying impeachments (with the Chief Justice presiding at presidential trials) and 
+                    a vote of at least two‑thirds or more to convict with punishment no greater than removal/disqualification with 
+                    potential subsequent criminal prosecution. It also allows appointments until a replacement can be elected 
+                    during the corresponding state process.">
                     <h3 class="section-title">Section 3</h3>
                     <p>
                         The Senate of the United States shall be composed of two Senators from each State, chosen 
@@ -116,7 +148,15 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info =
+                    "What it basically means?:  States set rules for congressional elections, but Congress 
+                    can override; Congress must meet at least annually (date later changed by the 20th Amendment). Why 
+                    does this matter at all ?: Balances state control over elections with federal oversight to ensure 
+                    uniformity/access. Annotated: Section 4 enables the nation's states to handle election particulars 
+                    (time, place, manner), yet extends congressional authority to adjust rules with the aim of maintaining 
+                    national standards. It also requires Congress to meet often and barring extensive national interludes 
+                    of legislation (the 20th Amendment later adjusted the regular convening date from March back to January).">
+
                     <h3 class="section-title">Section 4</h3>
                     <p>
                         The Times, Places and Manner of holding Elections for Senators and Representatives, 
@@ -129,7 +169,14 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "What it basically means?:  Each chamber judges its own members’ elections/qualifications; sets rules; can 
+                    punish/expel with 2/3; keeps a Journal with votes recorded when requested; limits adjournment without the 
+                    other chamber’s consent. Why does this matter at all ?: Ensures transparency and self‑governance of each 
+                    chamber. Annotated: Section 5 empowers each House to judge elections/qualifications, compel attendance 
+                    to reach a quorum (majority), and discipline/expel members by two‑thirds vote. It mandates a published Journal 
+                    and allows recorded votes upon request, and it blocks either chamber from unilateral long adjournments or 
+                    moving locations without the other’s consent.">
                     <h3 class="section-title">Section 5</h3>
                     <p>
                         Each House shall be the Judge of the Elections, Returns and Qualifications of its own Members, 
@@ -154,7 +201,16 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "What it basically means?: Members are paid from the U.S. Treasury; protected from arrest in most 
+                    cases during sessions; Speech or Debate Clause shields legislative acts from outside questioning; 
+                    bans holding incompatible offices and forbids appointment to offices created/raised in pay during 
+                    their term. Why does this matter at all ?:  Protects legislative independence and prevents self‑
+                    dealing/conflicts. Annotated: Section 6 provides pay and limited immunity from arrest while traveling 
+                    to/from and attending sessions (except for treason, felony, or breach of the peace). The Speech or 
+                    Debate Clause protects legislative acts from prosecution or civil suits, encouraging open debate. It 
+                    bars members from holding other federal offices and from benefiting from offices created or given raises 
+                    during their term.">
                     <h3 class="section-title">Section 6</h3>
                     <p>
                         The Senators and Representatives shall receive a Compensation for their Services, to be
@@ -173,7 +229,16 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "What it basically means?: Revenue bills start in the House; bills go to the President for signature 
+                    or veto; Congress can override vetoes with 2/3 in both chambers; pocket veto when Congress adjourns; 
+                    resolutions needing concurrence also go to the President. Why does this matter at all ?: Sets the core 
+                    bill → law process; embeds executive check and legislative override. Annotated: Section 7 requires revenue 
+                    bills to originate from the House (the Senate can amend), and it also enshrines current presentment of 
+                    bills to the President to sign or veto. If vetoed, a two‑thirds override of both houses can enact the bill; 
+                    if the President does nothing while both houses are convening in session during 10 days (Sundays excepted), 
+                    it goes into law, but if both houses adjourn, the pocket veto renders it ineffective. Orders/resolutions 
+                    requiring concurrence are also subject to presentment to the President.">
                     <h3 class="section-title">Section 7</h3>
                     <p>
                         All Bills for raising Revenue shall originate in the House of Representatives; but the 
@@ -203,7 +268,18 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "What it basically means?: Taxing & spending for defense/general welfare; borrowing; Commerce Clause 
+                    (foreign, interstate, tribes); naturalization & bankruptcy; coin money/standards; punish counterfeiting; 
+                    post offices/roads; patents & copyrights; create lower federal courts; define/punish piracy & offenses 
+                    against law of nations; declare war; raise armies (2‑year funding limitation); maintain navy; regulate 
+                    armed forces; call/organize militia; exclusive legislation over the federal seat (D.C.) and federal enclaves; 
+                    Necessary and Proper Clause to carry powers into effect. Why does this matter at all ?: Provides the main 
+                    toolkit for federal legislation. Annotated: Section 8 lists what powers may be legislated by Congress: from 
+                    taxation/spending and regulation of commerce to war powers, finances and standards, post offices and roads, 
+                    patents/copyrights, and judiciary of the federal government. It also bestows powers over the military and 
+                    militia and assigns powers over the District and federal properties. The Necessary and Proper Clause assigns 
+                    powers of incidental legislation necessitated while exercising powers listed.">
                     <h3 class="section-title">Section 8</h3>
                     <p>
                         The Congress shall have Power To lay and collect Taxes, Duties, Imposts and Excises, to pay 
@@ -280,7 +356,17 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                "What it basically means?: Early compromise of slave trade (time‑limited); suspension of habeas corpus only 
+                during rebellion/invasion; prohibiting bills of attainder and ex post facto laws; apportionment of direct taxes 
+                (subsequently modified by 16th Amendment); no export taxes; no preferred treatment of ports; only appropriation 
+                with public accounting spends money; no nobility titles; no receiving of foreign presents without permission.
+                Why does this matter at all ?:  Hard limits that protect liberty and ensure fiscal transparency and republican 
+                government. Annotated: Section 9 puts non-negotiable limits around Congress: it cannot suspend habeas corpus 
+                except during rebellion or invasion of the country, nor emit attainders or ex post facto laws. It caps direct 
+                and export taxes and forbids port favors and requires appropriations and public accountability of federal spending.
+                 It forbids the giving of titles of nobility and places a limit on acceptance of foreign emoluments without 
+                 Congressional approval.">
                     <h3 class="section-title">Section 9</h3>
                     <p>
                         The Migration or Importation of such Persons as any of the States now existing shall think proper to 
@@ -318,7 +404,15 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "What it basically means?: States cannot make treaties, coin money, issue bills of attainder/ex post 
+                    facto laws, impair contracts, award nobility titles; with Congressional consent, some taxes/compacts 
+                    allowed; no soldiers in peacetime/war without assent (except imminent danger). Why does this matter 
+                    at all ?: Preserves a uniform national framework and prevents interstate economic warfare. Annotated: 
+                    Section 10 forbids the states from acting as sovereign nations―no war‑making, coinage, treaty‑interfering 
+                    laws or laws invalidating contracts—and from exercising certain taxes or customs without congressional 
+                    ratification. It allows interstate compacts and taxation only with federal approval and prohibits peacetime 
+                    armies/war except with imminent danger and protection of national unity and stable commerce.">
                     <h3 class="section-title">Section 10</h3>
                     <p>
                         No State shall enter into any Treaty, Alliance, or Confederation; grant Letters of Marque and Reprisal; 
@@ -339,7 +433,6 @@
                     </p>
                 </section>
             </article>
-        </div>
         </div>
         <button type="button" class="collapsible-article">Article II</button>
         <div class="content">
@@ -604,9 +697,14 @@
     <hr style="border: none; height: 30px; background: #fff; margin: 40px 0;">
 
     <section id="amendments">
+        <div id="popup"></div>
         <button type="button" class="collapsible-amendment">First Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "What it means: Protects freedoms of religion, speech, press, assembly, and petition. Why does it matter? 
+                Core safeguard for individual liberties; allows for a vibrant democracy. SUMMARY: The First Amendment
+                guarantees the freedoms of religion, speech, press, assembly, and petition, forming the foundation of a 
+                democratic society.">
                 <p>
                     Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging
                     the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government 
@@ -616,7 +714,11 @@
         </div>
         <button type="button" class="collapsible-amendment">Second Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "What it means: Recognizes a militia’s role in a free state and protects an individual right to keep and 
+                bear arms. Why does it matter? : Sets boundaries for government regulations of firearms and connects civic 
+                defense with individual rights. SUMMARY: The Second Amendment protects an individual right to possess and carry 
+                firearms, while also referencing the militia as part of state security. ">
                 <p>
                     A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, 
                     shall not be infringed.
@@ -625,7 +727,12 @@
         </div>
         <button type="button" class="collapsible-amendment">Third Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "What it means: The government cannot house soldiers in private homes without the owner’s consent 
+                in peacetime; in wartime, only if authorized by law. Why does it matter? Protects private property 
+                and domestic privacy from military intrusion; reflects Revolutionary‑era grievances. SUMMARY: The Third 
+                Amendment creates a strong home privacy rule against involuntary military quartering, drawing a bright 
+                line in peacetime and requiring statutory procedures in wartime.">
                 <p>
                     No Soldier shall, in time of peace be quartered in any house, without the consent of the Owner, nor in time of war, but 
                     in a manner to be prescribed by law.
@@ -634,7 +741,12 @@
         </div>
         <button type="button" class="collapsible-amendment">Fourth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "What it means: Protects privacy and property by restricting government searches and seizures and 
+                requiring particularized warrants based on probable cause. Why does it matter? Core safeguard for 
+                personal privacy and liberty; sets standards for warrant issuance and government intrusions. SUMMARY: 
+                The Fourth Amendment bars unreasonable government intrusions and requires warrants supported by probable 
+                cause and particularity for many searches.">
                 <p>
                     The right of the people to be secure in their persons, houses, papers, and effects, against unreasonable searches and 
                     seizures, shall not be violated, and no Warrants shall issue, but upon probable cause, supported by Oath or affirmation, 
