this should be good for the toggle

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -17,10 +17,17 @@
     <header>
         <h1 class="main-title">The Constitution of the United States</h1>
         <h2 class="sub-title">(As amended through the 27th Amendment, May 5, 1992)</h2>
-        <a href="#" id="link1">Back to Top</a>
-        <a href="#" id="link2">Articles</a>
-        <a href="#" id="link3">Amendments</a>
-
+        <ul>
+            <li>
+                <a href="#" id="link2">Articles</a>
+                <a href="#" id="link3">Amendments</a>
+                <a href="#" id="link4">History</a>
+            </li>
+            <li>
+                <button id="popup-toggle">Popup Mode: OFF</button>
+            </li>
+        </ul>
+       
     </header>
 
     <section id="articles">
@@ -1209,7 +1216,9 @@
             </article>
         </div>
     </section>
+    <section id="history">
 
+    </section>
     <script src="jquery-3.7.1.min.js"></script>
     <script src="script.js"></script>
 </body>
