--- a/lab2/index.html
+++ b/lab2/index.html
@@ -831,7 +831,11 @@
         </div>
         <button type="button" class="collapsible-amendment">Eighth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "The Eighth amendment was created to ensure that punishment is proportional to the offender and the offense they have done. 
+                This amendment protects the right to bail. The interpretation of cruel and unusual punishments has evolved from torture to 
+                a looser interpretation of the wanton infliction of pain. This article is one of the few that apply to the national and state 
+                governments.">
                 <p>
                     Excessive bail shall not be required, nor excessive fines imposed, nor cruel and unusual punishments inflicted.
                 </p>
@@ -839,7 +843,9 @@
         </div>
         <button type="button" class="collapsible-amendment">Ninth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "The Ninth amendment states that the rights listed in the constitution are not a comprehensive list of rights given to the 
+                people. This amendment was added to prevent an interpretation that people do not have rights outside of the ones listed.">
                 <p>
                     The enumeration in the Constitution, of certain rights, shall not be construed to deny or disparage others retained by the people.
                 </p>
@@ -847,7 +853,10 @@
         </div>
         <button type="button" class="collapsible-amendment">Tenth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info=
+                "The tenth amendment focuses on the federal governments powers and those reserved to the states. This amendment has gone through 
+                many interpretations however the current interpretation is it prevents congress from directly compelling a state to enact or 
+                enforce a federal regulatory program and it serves as a limitation on congressional power.">
                 <p>
                     The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States 
                     respectively, or to the people.
