started adding annotations for art IV; need to fix smth about styling...

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -603,7 +603,12 @@
         <button type="button" class="collapsible-article">Article IV</button>
         <div class="content">
             <article class="article">
-                <section class="section-body">
+                <section class="section-body" data-info =
+                    "As a result of the Constitution's federal structure that allows for each state to maintain their own sovereignty, the 
+                    nation runs a risk of multiple states exercising their powers over the same issue or dispute. Section 1 of Article IV, 
+                    also known as the Full Faith and Credit Clause, mitigates that risk by adjusting the interrelationships between the 
+                    states. It require each state to give &ldquo;Full Faith and Credit&rdquo; to the public acts, records and judicial 
+                    proceedings of every other state.">
                     <h3 class="section-title">Section 1</h3>
                     <p>
                         Full Faith and Credit shall be given in each State to the public Acts, Records, and judicial Proceedings of 
@@ -612,7 +617,22 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info = 
+                    "Section 2 of Article IV contains three clauses on: Privileges and Immunities, Interstate Extradition, and Slavery. 
+                    The last clause have since become obsolete.
+                    The Privileges and Immunities Clause grants the citizens of one state the same privileges and immunities of the 
+                    citizens of another state. This clause was made to prevent discrimination in towards citizens of different states.
+                    The Interstate Extradition Clause makes it so that if a person was accused of a crime in one state, they can't 
+                    simply just flee to another state. The Governor of the state from which the accused fled and request for their 
+                    return from the asylum state. Notably though, this clause is not self-executing and the Constitution does not 
+                    provide Congress to implement it. 
+                    A following act, known as the Extradition Act, was pass later on that required governors of each state to return 
+                    the accused upon lawful demand from another state. However, in Kentucky v. Dennison, the Supreme Court held that 
+                    this was more of a moral duty of the state and that the federal government had no power to enforce it. This 
+                    decision was later overrules in 1987, and the current version allow states to invoke the power of the federal 
+                    courts to enforce the act against asylum state officers. 
+                    The last clause, the Fugitive Slavery Clause, had been nullified by the Thirteenth Amendment's abolition of slavery. 
+                    In essence, it contemplated the right of slave owners to reclaim an enslaved person who had fled to another state.">
                     <h3 class="section-title">Section 2</h3>
                     <p>
                         The Citizens of each State shall be entitled to all Privileges and Immunities of Citizens in the several 
@@ -630,7 +650,12 @@
                     </p>
                 </section>
 
-                <section class="section-body">
+                <section class="section-body" data-info = 
+                    "Section 3 is made up of 2 clauses: one on admissions into the Union, and another on federal territory and property. 
+                    The admissions clause explains that new states can only be admitting into the Union by the Congress. States cannot 
+                    be made by any one or more states without Congressional consent. 
+                    The property clause provides Congress with the power to govern and dispose all territory and other properties of 
+                    the United States.">
                     <h3 class="section-title">Section 3</h3>
                     <p>
                         New States may be admitted by the Congress into this Union; but no new State shall be formed or erected within 
@@ -1316,9 +1341,9 @@
                 <p>
                     Just a few years later, this new system would be tested during the Whiskey Rebellion of 1794, when farmers in western Pennsylvania protested a federal tax 
                     on whiskey. Unlike under the Articles of Confederation, the federal government now had the authority to act decisively. Federal troops under President George 
-                    Washington suppressed the rebellion effectively without violence, demonstrating that the national government not only had the power to enforce its laws but 
-                    also the legitimacy to maintain order. It was a defining moment that proved the Constitution was more than just words on paper—it was a functioning framework, 
-                    capable of holding the nation together.
+                    Washington suppressed the rebellion effectively without significant violence, demonstrating that the national government not only had the power to enforce 
+                    its laws but also the legitimacy to maintain order. It was a defining moment that proved the Constitution was more than just words on paper—it was a 
+                    functioning framework, capable of holding the nation together.
                 </p>
             </article>
         </div>
