adding my annotastions and readme

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -587,7 +587,11 @@
         <button type="button" class="collapsible-article">Article III</button>
         <div class="content">
             <article class="article">
-                <section class="section-body">
+                <section class="section-body" data-info=" The Supreme Court is explicitly granted judicial power, usually 
+                    remembered as the ability to deem if a law/ruling is constitutional or unconstitutional. To ensure the 
+                    Judges are not afraid of being removed after a controversial decision, they are granted the position 
+                    as long as they have good behavior. This is now referred to as lifetime terms since the article does 
+                    not define good behavior.">
                     <h3 class="section-title">Section 1</h3>
                     <p>
                         The judicial Power of the United States, shall be vested in one supreme Court, and in such inferior Courts 
@@ -597,7 +601,11 @@
                     </p>
                 </section>
                 
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "The judicial power applies to all cases. The Supreme Court has the power to have the first hearing and rule on 
+                    any cases affecting Ambassadors, public Ministers and Consuls, or when a State is a party. In contrast, other cases 
+                    are heard by the Supreme Court through appealing the original ruling. In cases involving crimes, they will be heard 
+                    in the state where they occurred, and if the case did not happen in any State, it will be heard where the law states.">
                     <h3 class="section-title">Section 2</h3>
                     <p>
                         The judicial Power shall extend to all Cases, in Law and Equity, arising under this Constitution, the Laws of 
@@ -621,7 +629,10 @@
                     </p>
                 </section>
             
-                <section class="section-body">
+                <section class="section-body" data-info=
+                    "Treason against the United States is defined as levying war or providing aid to its enemies and will only be charged if 
+                    two witnesses see the same evidence or confess in Court. The crime of treason will not be held against the individual's 
+                    family, and only applies to the person charged.">
                     <h3 class="section-title">Section 3</h3>
                     <p>
                         Treason against the United States, shall consist only in levying War against them, or in adhering to their Enemies, 
@@ -823,7 +834,10 @@
         </div>
         <button type="button" class="collapsible-amendment">Fifth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info="
+                The Fifth Amendment is commonly referred to as the right to &ldquo;Plead the Fifth&rdquo; or the right to remain silent. It 
+                ensures that silence cannot be used against you in court. The amendment also explicitly states that no one can be tried for 
+                the same crime twice.">
                 <p>
                     No person shall be held to answer for a capital, or otherwise infamous crime, unless on a presentment or indictment of 
                     a Grand Jury, except in cases arising in the land or naval forces, or in the Militia, when in actual service in time of 
@@ -835,7 +849,8 @@
         </div>
         <button type="button" class="collapsible-amendment">Sixth Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info="The Sixth Amendment can be summarized as the right to a fair trial. After Gideon V. Wainwright, 
+                it now includes fair representation where the court is obligated to provide a lawyer if you cannot afford one yourself.">
                 <p>
                     In all criminal prosecutions, the accused shall enjoy the right to a speedy and public trial, by an impartial jury of the 
                     State and district wherein the crime shall have been committed, which district shall have been previously ascertained by law, 
@@ -846,7 +861,7 @@
         </div>
         <button type="button" class="collapsible-amendment">Seventh Amendment</button>
         <div class="content">
-            <article class="article">
+            <article class="article" data-info="The Seventh Amendment guarantees the right to have a jury if one desires it.">
                 <p>
                     In Suits at common law, where the value in controversy shall exceed twenty dollars, the right of trial by jury shall be 
                     preserved, and no fact tried by a jury, shall be otherwise re-examined in any Court of the United States, than according to 
