added some detail and fixed some bugs with search bar

--- a/lab1/data.html
+++ b/lab1/data.html
@@ -43,14 +43,19 @@
     </header>
 
     <section id="gallery"> 
-        <h1 style="font-size: 2.7rem;">Company Stock Data</h1>
+        <h1 style="font-size: 2.7rem; margin-top: -10px;">Company Stock Data</h1>
         <div class="search-bar">
-            <input type="text" id="company-input" placeholder="Enter Company Ticker Symbol (e.g., AAPL)">
-            <button id="fetch-data-button">Fetch Data</button>
+            <input list="company-list" id="company-input" placeholder="Enter Security (e.g., AAPL)">
+            <datalist id="company-list"></datalist>
+            <button id="fetch_data_button">Fetch Data</button>
         </div>
         <div id="chart-container">
             <svg id="chart" width="800" height="400"></svg>
             <div id="cardAdd"></div>
+        </div>
+        <div class="ticker-container">
+            <div class="ticker-content" id="news">
+            </div>
         </div>
     </section>
 
@@ -96,7 +101,7 @@
 
     <!-- Scripts -->
     <script src="resources/jquery-3.7.1.min.js"></script>
-    <script src="resources/script.js"></script>
+    <script src="resources/scriptV2.js"></script>
     <script src="https://d3js.org/d3.v7.min.js"></script>
     <script src="api.js"></script>
 
