--- a/lab1/data.html
+++ b/lab1/data.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="resources/styles.css">
-    <!-- <link rel="icon" href="resources/images/bubble-tea.png" type="image/png"> -->
-    <title>Stonkly</title>
+    <link rel="icon" href="resources/images/bubble-tea.png" type="image/png">
+    <title>Stonkly 💸</title>
     <style>
         #link0 {
             margin-left: 40px;
@@ -36,8 +36,13 @@
     </nav>
 
     <header id="home">
-        <h1 style="font-size: 3rem;">✦ STONKLY ✦ </h1>
-        <div class="vertical-line"></div>
+        <div id=container>
+            <div id=flip>
+                <div>✦ STONKLY ✦</div>
+                <div> Stock Market</div>
+                <div> Global News</div>
+            </div>
+        </div>
         <h2>99% of Gamblers Quit Before they Win Big.</h2>
         <h3>Be the 1% that Wins Big!</h3>
     </header>
